hphp/hack/test/typecheck/argument_unpacking/unpack_call5.php.exp
File "unpack_call5.php", line 13, characters 10-17:
Invalid argument (Typing[4110])
File "unpack_call5.php", line 5, characters 13-15:
Expected int
File "unpack_call5.php", line 13, characters 10-17:
But got string
